--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --content-base public/"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amazeui-react": "^1.2.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1"
