--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --content-base public/"
+    "start": "webpack-dev-server --content-base public/",
+    "mobile": "webpack-dev-server --content-base public/ --host 192.168.199.246",
+    "release": "NODE_ENV=production webpack -p --progress"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "amazeui-react": "^1.2.2",
+    "axios": "^0.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1"
